@@ -1,3 +1,11 @@
+2004-11-25  Jordi Mas i Hernandez <jordi@ximian.com>
+
+	* ListBox.cs, Theme.cs, ThemeWin32Classic.cs:	
+	- Horizontal scroolbar	
+	- Multicolumn
+	- Fixes
+
+
 2004-11-25  John BouAntoun <jba-mono@optusnet.com.au>
 
 	* MonthCalendar.cs: 
